--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 $app-primary-font: "'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;";
 
-$app-primary-color: #F4BAC6;
-$app-secondary-color: #FFFFFF;
-$app-third-color: #F5F5F5;
+$app-primary-color: #f4bac6;
+$app-secondary-color: #ffffff;
+$app-third-color: #f5f5f5;
