--- a/frontend/src/components/titleRecipe/TitleRecipe.scss
+++ b/frontend/src/components/titleRecipe/TitleRecipe.scss
@@ -6,11 +6,17 @@
     font-size: 1.7rem;
     text-align: center;
     margin-top: 1rem;
+    @include desktop {
+      font-size: 3rem;
+    }
   }
   .rating {
     margin: 0 auto;
     font-size: 20px;
     margin-top: 1rem;
+    @include desktop {
+      font-size: 35px;
+    }
   }
   .rating a {
     float: initial;
