--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,4 +1,6 @@
 @import "../src/assets/styles/variables.scss";
+@import "../src/assets/mixins/mixins.scss";
+
 
 /******************** import components ******************************/
 @import "./components/navbar/Navbar.scss";
