--- a/frontend/src/components/containerCard/ContainerCard.scss
+++ b/frontend/src/components/containerCard/ContainerCard.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   background-color: $app-third-color;
+  @include desktop {
+    width: 17rem;
+    height: 19rem;
+  }
 
   .imagecard {
     height: 45%;
@@ -15,6 +19,10 @@
   .rating {
     margin: 0 auto;
     font-size: 20px;
+    @include desktop {
+      padding-top: 1rem;
+      font-size: 30px;
+    }
   }
   .rating span {
     color: $app-primary-color;
@@ -24,5 +32,9 @@
     text-align: center;
     height: 100%;
     margin: inherit;
+    @include desktop {
+      font-size: 1.5rem;
+      padding-top: 2rem;
+    }
   }
 }
