--- a/frontend/src/components/usefulInformation/UsefulInformation.scss
+++ b/frontend/src/components/usefulInformation/UsefulInformation.scss
@@ -14,10 +14,16 @@
     display: flex;
     height: 1.3rem;
     margin: auto;
+    @include desktop {
+      height: 2rem;
+    }
   }
   h3 {
     font-size: 0.9rem;
     padding-left: 0.5rem;
     margin-top: 0.2rem;
+    @include desktop {
+      font-size: 1.3rem;
+    }
   }
 }
