--- a/frontend/src/pages/recipe/Recipe.scss
+++ b/frontend/src/pages/recipe/Recipe.scss
@@ -13,6 +13,11 @@
       width: 6rem;
       height: 2rem;
       border: #e77189 solid 2px;
+      @include desktop {
+        height: 2.5rem;
+        font-size: 1rem;
+     
+      }
     }
   }
 }
